minimumValue seems to work. We now need to setup experiments on the DAS.